# pgembed

./: .gitattributes  .gitignore  MANIFEST.in  Makefile  README.md  pgembed-example.ipynb  pyproject.toml  setup.py
.github/workflows/: build-and-test.yml
examples/: PGDUCKDB_ARCHITECTURE.md  pg_search_example.py  pgduckdb_example.py  pgtextsearch_example.py  pgvector_example.py  pyproject.toml  simple.py
pgbuild/: Makefile
src/pgembed/: __init__.py  _build.py  _commands.py  postgres_server.py  utils.py
src/pgembed_pgtextsearch/: __init__.py  pyproject.toml
src/pgembed_pgvector/: __init__.py  pyproject.toml
src/pgembed_pgvectorscale/: __init__.py  pyproject.toml
tests/: test_pgembed.py
