[project]
name = "pgembed" # Required
version = "0.1.8"  # Required
description = "Self-contained postgres server for your python applications" # Required
readme = "README.md" # Optional
requires-python = ">=3.12"
license = {file = "LICENSE.txt"}
urls={repository="https://github.com/Ladybug-Memory/pgembed"}
authors=[{ name="Oscar Moll", email="orm@csail.mit.edu" }, { name="Arun Sharma", email="arun@sharma-home.net" }]
keywords=["postgresql", "pgvector", "pg_duckdb", "pgembed", "pg_textsearch", "rag"]
dependencies = [
    "fasteners>=0.19",
    "platformdirs>=4.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "sysv_ipc",
]
test = [
    "pytest",
    "psycopg2-binary",
    "sqlalchemy>=2",
    "sqlalchemy-utils"
]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["pgembed*", "pgembed_pg*"]  # package names should match these glob patterns

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.cibuildwheel]
test-extras = "test"
test-command = "bash -x {project}/cibuildwheel_test.bash {project}"
manylinux-packages = []

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=58.0.0", "wheel"]
build-backend = "setuptools.build_meta"
