[project]
name = "pgembed-pgvectorscale"
version = "0.1.8"
description = "pgvectorscale extension for pgembed"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pgembed>=0.1.8"]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=58.0.0", "wheel"]
build-backend = "setuptools.build_meta"
